API documentation updated with tags and descriptions. Added controller helpers to sync guild deletion by updating players guild id to null. A guild master can now only have one guild, added checkers to prevent a guild master from having another guild. Was having issues with players stats object, fixed. Shortened repeated code especially database collection calls. Created REST files for testing.
